[BACKEND-28]: adjust tests for FridgeResource